HW13(Unit9_2)
#2025208751 염경환 

number_list = []
number_list.append(1)
number_list.append(2)
number_list.append(3)
number_list.append(4)
number_list.append(5)

number_list = []
for number in range(1, 6):
    number_list.append(number)

number_list
[1, 2, 3, 4, 5]

number_list = [number-1 for number in range(1,6)]
number_list
[0, 1, 2, 3, 4]

a_list = [number for number in range(1,6) if number % 2 == 1]
a_list
[1, 3, 5]

a_list = []
for number in range(1,6):
  if number%2 == 1:
    a_list.append(number)
a_list
[1, 3, 5]

sentence = ['I', 'Love', 'Python', 'Soooooo', 'MUCH!!!']
word.lower() for word in sentence]
['i', 'love', 'python', 'soooooo', 'much!!!']

[word for word in sentence if len(word) > 6]
['Soooooo', 'MUCH!!!']

[(x, x ** 2, x ** 3) for x in range(10)]
[(0, 0, 0),
 (1, 1, 1),
 (2, 4, 8),
 (3, 9, 27),
 (4, 16, 64),
 (5, 25, 125),
 (6, 36, 216),
 (7, 49, 343),
 (8, 64, 512),
 (9, 81, 729)]

rows = range(1,4)
cols = range(1,3)
for row in rows:
  for col in cols:
    print(row, col)

1 1
1 2
2 1
2 2
3 1
3 2

rows = range(1,4)
cols = range(1,3)
cells = [(row, col) for row in rows for col in cols]
for cell in cells:
  print(cell)

(1, 1)
(1, 2)
(2, 1)
(2, 2)
(3, 1)
(3, 2)

[(i,j) for i in range(5) for j in range(i)]
[(1, 0),
 (2, 0),
 (2, 1),
 (3, 0),
 (3, 1),
 (3, 2),
 (4, 0),
 (4, 1),
 (4, 2),
 (4, 3)]

word = 'letters'
letter_counts= {letter: word.count(letter) for letter in word}
letter_counts
{'l': 1, 'e': 2, 't': 2, 'r': 1, 's': 1}

word = 'letters'
letter_counts= {letter: word.count(letter) for letter in set(word)}
letter_counts
{'l': 1, 'r': 1, 's': 1, 'e': 2, 't': 2}

a_set = {number for number in range(1,6) if number % 3 == 1}
a_set
{1, 4}

days = ['Monday', 'Tuesday', 'Wednesday']
fruits = ['banana', 'orange', 'peach']
drinks = ['coffee', 'tea', 'beer']
desserts = ['tiramisu', 'ice cream', 'pie', 'pudding']
for day, fruit, drink, dessert in zip(days, fruits, drinks, desserts):
  print(day, ": drink", drink, "- eat", fruit, "- enjoy", dessert)
Monday : drink coffee - eat banana - enjoy tiramisu
Tuesday : drink tea - eat orange - enjoy ice cream
Wednesday : drink beer - eat peach - enjoy pie

english= 'Monday', 'Tuesday', 'Wednesday'
french= 'Lundi', 'Mardi', 'Mercredi'
list( zip(english, french) )
[('Monday', 'Lundi'), ('Tuesday', 'Mardi'), ('Wednesday', 'Mercredi')]

dict( zip(english, french) )
{'Monday': 'Lundi', 'Tuesday': 'Mardi', 'Wednesday': 'Mercredi'}

def menu(wine, entree, dessert):
  return {'wine': wine, 'entree': entree, 'dessert': dessert}

menu('chardonnay', 'chicken', 'cake')
{'wine': 'chardonnay', 'entree': 'chicken', 'dessert': 'cake'}

def menu(wine, entree, dessert):
  return {'wine': wine, 'entree': entree, 'dessert': dessert}

menu(entree='beef', dessert='bagel', wine='bordeaux')
{'wine': 'bordeaux', 'entree': 'beef', 'dessert': 'bagel'}

menu('frontenac', dessert='flan', entree='fish')
{'wine': 'frontenac', 'entree': 'fish', 'dessert': 'flan'}

def menu(wine, entree, dessert='pudding'):
  return {'wine': wine, 'entree': entree, 'dessert': dessert}

menu('chardonnay', 'chicken')
{'wine': 'chardonnay', 'entree': 'chicken', 'dessert': 'pudding'}

menu('dunkelfelder', 'duck', 'doughnut')
{'wine': 'dunkelfelder', 'entree': 'duck', 'dessert': 'doughnut'}

def menu(price, wine='chardonnay', entree='chicken', dessert='pudding'):
  return {'price': price, 'wine': wine, 'entree': entree, 'dessert': dessert}

menu(price=100)
{'price': 100, 'wine': 'chardonnay', 'entree': 'chicken', 'dessert': 'pudding'}

def menu(price, wine='chardonnay', entree='chicken’, dessert=‘pudding'):
  return {'price': price, 'wine': wine, 'entree': entree, 'dessert': dessert}
menu(price=100, 'saint-pierre')
File "<ipython-input-41-2276001416>", line 1
    menu(price=100, 'saint-pierre')
                                  ^
SyntaxError: positional argument follows keyword argument

def echo(anything):
  'echo returns its input argument'
  return anything

def print_if_true(thing, check):
  """ Prints the first argument if a second argument is true. The operation is:"""
  if check:
    print(thing)




